[gd_scene load_steps=7 format=3 uid="uid://bx0jwniwoa425"]

[ext_resource type="Script" uid="uid://dll71u2naug44" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Theme" uid="uid://dfirkxaumd5y0" path="res://ui/ui_theme_1.tres" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://cwj4d3gf6i1jt" path="res://scenes/menu_addon/audio_bars.tscn" id="3_bqqt6"]
[ext_resource type="PackedScene" uid="uid://xjp3chnbhys2" path="res://assets/animated_sprite_sheets/player_sprites.tscn" id="4_wu84c"]

[sub_resource type="Gradient" id="Gradient_ekxnf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bqqt6"]
gradient = SubResource("Gradient_ekxnf")

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ekxnf")

[node name="Menu_BG_Underlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.203922)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bqqt6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label_Header" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_l6cm7")
text = "I'M WALKIN' HERE"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("1_l6cm7")

[node name="Button_Play" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_l6cm7")
text = "PLAY"

[node name="Button_Continue" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_l6cm7")
text = "Continue"

[node name="Button_Replay" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_l6cm7")
text = "RESTART"

[node name="Button_Settings" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_l6cm7")
text = "SETTINGS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("1_l6cm7")

[node name="Label_Footer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 31
text = "HIGH SCORE: XXXX"
horizontal_alignment = 1

[node name="settings_panel" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -436.0
offset_top = -70.0
offset_bottom = 71.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="settings_panel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="settings_panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="settings_panel/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="AudioBars" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_bqqt6")]
layout_mode = 2
audioBus = "Master"

[node name="Label2" type="Label" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sfx"
horizontal_alignment = 1

[node name="AudioBars2" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_bqqt6")]
layout_mode = 2
audioBus = "Sfx"

[node name="Label3" type="Label" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="AudioBars3" parent="settings_panel/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_bqqt6")]
layout_mode = 2
audioBus = "Music"

[node name="Player" parent="." instance=ExtResource("4_wu84c")]
position = Vector2(288, 656)
